# ethminer

./: .gitignore  CMakeLists.txt
cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  ethminer-buildinfo.c  ethminer-buildinfo.h  gitinfo.txt  variables.ps1  variables.sh
cmake/_3rdParty/Hunter/: install-root-dir
cmake/_3rdParty/Hunter/config-id/: config.cmake
cmake/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/ethminer/: Makefile  cmake_install.cmake
cmake/libapicore/: Makefile  cmake_install.cmake
cmake/libdevcore/: Makefile  cmake_install.cmake
cmake/libethash-cl/: Makefile  cmake_install.cmake  ethash.h
cmake/libethash-cl/kernels/: Makefile  cmake_install.cmake
cmake/libethcore/: Makefile  cmake_install.cmake
cmake/libhwmon/: Makefile  cmake_install.cmake
cmake/libpoolprotocols/: Makefile  cmake_install.cmake
ethminer/: MinerAux.h  main.cpp
libdevcore/: Worker.cpp
libethash-cl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel_basic.cl  CLMiner_kernel_experimental.cl  CLMiner_kernel_stable.cl  CMakeLists.txt  ethash-genoil.cl  ethash-new.cl  ethash.cl
libethash-cl/kernels/cl/: ethash.cl
libethcore/: Farm.h  Miner.h
